# arch-audit-gtk

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: rust.yml
artwork/: README.md
contrib/: arch-audit-gtk.desktop  arch-audit-gtk.hook  arch-audit-gtk.tmpfiles
src/: args.rs  config.rs  errors.rs  gui.rs  main.rs  notify.rs  updater.rs
