[package]
name = "arch-audit-gtk"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
gtk = "0.9.0"
glib = "0.10.1"
libappindicator = "0.5.2"
log = "0.4.14"
env_logger = "0.8.3"
