[package]
name = "arch-audit-gtk"
version = "0.1.2"
description = "Arch Linux Security Update Notifications"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/arch-audit-gtk"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
gtk = "0.9.0"
glib = "0.10.1"
libappindicator = "0.5.2"
log = "0.4.14"
env_logger = "0.8.3"
structopt = "0.3.21"
inotify = "0.9.2"
rand = "0.8.3"
