[package]
name = "arch-audit-gtk"
version = "0.2.0"
description = "Arch Linux Security Update Notifications"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/arch-audit-gtk"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
arch-audit = "0.1.19"
dirs-next = "2.0.0"
env_logger = "0.8.3"
glib = "0.10.1"
gtk = "0.9.0"
humantime = "2.1.0"
inotify = "0.9.2"
libappindicator = "0.5.2"
log = "0.4.14"
opener = "0.4.1"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
toml = "0.5.8"
